2019-12-14 Marek M. Cel <marekcel@marekcel.pl>
  
    * blade element theory
    
    * temporary modified UH-60 model to evaluate blade element theory rotor model



2019-12-08 Marek M. Cel <marekcel@marekcel.pl>
  
    * pressure units

    * EADI maximum flap extension speed

    * indicated airspeed
    
    * autopilot - ARM/ALT mode switch condition
    
    * deb package scripts
    
    * autopilot - refactorization



2019-11-30 Marek M. Cel <marekcel@marekcel.pl>
  
    * layer clouds

    * references in comments

    * C-130

    * CGI landing gear and flaps
    
    * camera offset due to pilot's eyes position



2019-11-23 Marek M. Cel <marekcel@marekcel.pl>
  
    * version number correction

    * autopilot and navigation



2019-11-17 Marek M. Cel <marekcel@marekcel.pl>

    * airports and navaids symbols
    
    * DAFIF format support
    
    * units converter consexpr specifiers



2019-11-10 Marek M. Cel <marekcel@marekcel.pl>

    * airports locations
    
    * autopilot



2019-10-26 Marek M. Cel <marekcel@marekcel.pl>
    
    * EADI deviation bar fix
    
    * navigation
    
    * autopilot



2019-10-13 Marek M. Cel <marekcel@marekcel.pl>
    
    * CGI module const parent
    
    * networking
    
    * Vne indication on PFD
    
    * autopilot



2019-10-06 Marek M. Cel <marekcel@marekcel.pl>
    
    * locations on final
    
    * documentation



2019-10-05 Marek M. Cel <marekcel@marekcel.pl>
    
    * data structures refactorization

    * propullsion inputs recording

    * Mach number fix

    * MSVC fixes
    
    * autopilot
    
    * EFIS autopilot symbols



2019-09-29 Marek M. Cel <marekcel@marekcel.pl>
    
    * documentation
    
    * locations



2019-09-28 Marek M. Cel <marekcel@marekcel.pl>
    
    * piston engine modified
    
    * propeller induced velocity

    * propeller governor

    * compressor model removed

    * Cessna 172 engine tuning

    * P-51 engine and propeller tuning
    