@@ -22,6 +22,8 @@
 
 #include <fdm/models/fdm_Blade.h>
 
+#include <fdm/xml/fdm_XmlUtils.h>
+
 ////////////////////////////////////////////////////////////////////////////////
 
 using namespace fdm;
@@ -33,3 +35,45 @@ Blade::Blade() {}
 ////////////////////////////////////////////////////////////////////////////////
 
 Blade::~Blade() {}
+
+////////////////////////////////////////////////////////////////////////////////
+
+void Blade::readData( XmlNode &dataNode )
+{
+    if ( dataNode.isValid() )
+    {
+        int result = FDM_SUCCESS;
+
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _r , "rotor_radius" );
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _c , "blade_chord"  );
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _e , "hinge_offset" );
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _m , "blade_mass"   );
+
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _eps_0   , "twist_0" );
+        if ( result == FDM_SUCCESS ) result = XmlUtils::read( dataNode, _deps_dr , "twist_rate" );
+
+        if ( result == FDM_SUCCESS )
+        {
+            _a = M_PI * _r*_r;
+            _b = _r - _e;
+
+            _s_b = _m * _r / 2.0;
+            _i_b = _m * _r * _r / 3.0;
+        }
+        else
+        {
+            XmlUtils::throwError( __FILE__, __LINE__, dataNode );
+        }
+    }
+    else
+    {
+        XmlUtils::throwError( __FILE__, __LINE__, dataNode );
+    }
+}
+
+////////////////////////////////////////////////////////////////////////////////
+
+void Blade::update( double omega )
+{
+
+}
