@@ -27,6 +27,7 @@
 #include <fdm/fdm_Defines.h>
 
 #include <fdm/utils/fdm_Table.h>
+#include <fdm/xml/fdm_XmlNode.h>
 
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -37,6 +38,26 @@ namespace fdm
  * @brief Rotor blade model class.
  *
  * This model is based on blade element theory.
+ *
+ * <h3>XML configuration file format:</h3>
+ * @code
+ * <main_rotor>
+ *   <blade_mass> { [kg] single blade mass } </blade_mass>
+ *   <rotor_radius> { [m] rotor radius } </rotor_radius>
+ *   <blade_chord> { [m] blades chord } </blade_chord>
+ *   <hinge_offset> { [m] flapping hinge offset } </hinge_offset>
+ *   <lift_slope> { [1/rad] blade section lift curve slope } </lift_slope>
+ *   <tip_losses> { [-] tip losses coefficient } </tip_losses>
+ *   <delta_0> { [-] drag coefficient constant component } </delta_0>
+ *   <delta_2> { [-] drag coefficient quadratic component } </delta_2>
+ *   <beta_max> { [rad] maximum flapping angle } </beta_max>
+ *   <ct_max> { [-] maximum thrust coefficient } </ct_max>
+ *   <cq_max> { [-] maximum thrust coefficient } </cq_max>
+ *   <thrust_factor> { [-] thrust scaling factor } </thrust_factor>
+ *   <torque_factor> { [-] torque scaling factor } </torque_factor>
+ *   <vel_i_factor> { [-] induced velocity scaling factor } </vel_i_factor>
+ * </main_rotor>
+ * @endcode
  *
  * @see Bramwell A.: Bramwells Helicopter Dynamics, 2001
  * @see Stepniewski W.: Rotary-Wing Aerodynamics. Volume I: Basic Theories of Rotor Aerodynamics, 1984
@@ -52,21 +73,36 @@ public:
     /** Destructor. */
     virtual ~Blade();
 
+    /**
+     * Reads data.
+     * @param dataNode XML node
+     */
+    virtual void readData( XmlNode &dataNode );
+
+    /**
+     * @brief update
+     * @param omega [rad/s]
+     */
+    virtual void update( double omega );
+
 protected:
 
-    double _radius;     ///< [m] rotor radius
-    double _chord;      ///< [m] blade chord
-    double _offset;     ///< [m] flapping hinge offset
-    double _twist;      ///< [rad/m] blade twist angle
-    double _mass;       ///< [kg] blage mass
+    Table _cd;                  ///< [-] blade section drag coefficient vs angle of attack
+    Table _cl;                  ///< [-] blade section lift coefficient vs angle of attack
 
-    Table _cd;          ///< [-] blade section drag coefficient vs angle of attack
-    Table _cl;          ///< [-] blade section lift coefficient vs angle of attack
+    double _r;                  ///< [m] rotor radius
+    double _c;                  ///< [m] blade chord
+    double _e;                  ///< [m] flapping hinge offset
+    double _m;                  ///< [kg] blage mass
 
-    double _area;       ///< [m^2] rotor area
-    double _span;       ///< [m] blade span
-    double _inertia;    ///< [kg*m^2] blade inertia around flapping hinge
-    double _moment;     ///< [kg*m] blade first mass moment
+    double _eps_0;              ///< [rad] blade twist at attachment
+    double _deps_dr;            ///< [rad/m] blade twist angle rate
+
+    double _a;                  ///< [m^2] rotor area
+    double _b;                  ///< [m] blade span
+
+    double _s_b;                ///< [kg*m] blade first moment of mass about flapping hinge
+    double _i_b;                ///< [kg*m^2] blade inertia moment about flapping hinge
 
 };
 
