@@ -26,6 +26,13 @@
 
 #include <fdm/fdm_Base.h>
 
+#include <fdm/models/fdm_Blade.h>
+
+#include <fdm/utils/fdm_Matrix3x3.h>
+#include <fdm/utils/fdm_Vector3.h>
+
+#include <fdm/xml/fdm_XmlNode.h>
+
 ////////////////////////////////////////////////////////////////////////////////
 
 namespace fdm
@@ -40,11 +47,47 @@ class FDMEXPORT MainRotor2 : public Base
 {
 public:
 
+    typedef std::vector< Blade* > Blades;
+
     /** Constructor. */
     MainRotor2();
 
     /** Destructor. */
     virtual ~MainRotor2();
+
+    /**
+     * Reads data.
+     * @param dataNode XML node
+     */
+    virtual void readData( XmlNode &dataNode );
+
+    /**
+     * @brief update
+     * @param omega [rad/s]
+     */
+    virtual void update( double omega,
+                         const Vector3 &vel_air_bas,
+                         const Vector3 &omg_air_bas,
+                         double collective,
+                         double cyclicLat,
+                         double cyclicLon );
+
+    inline const Vector3& getFor_BAS() const { return _for_bas; }
+    inline const Vector3& getMom_BAS() const { return _mom_bas; }
+
+protected:
+
+    Vector3 _for_bas;           ///< [N] total force vector expressed in BAS
+    Vector3 _mom_bas;           ///< [N*m] total moment vector expressed in BAS
+
+    Vector3 _r_hub_bas;         ///< [m] rotor hub coordinates expressed in BAS
+
+    Matrix3x3 _bas2ras;         ///< matrix of rotation from BAS to RAS
+    Matrix3x3 _ras2bas;         ///< matrix of rotation from RAS to BAS
+
+    Blades _blades;             ///< main rotor blades
+
+    int _nb;                    ///< number of rotor blades
 };
 
 } // end of fdm namespace
