@@ -29,7 +29,7 @@ using namespace fdm;
 ////////////////////////////////////////////////////////////////////////////////
 
 UH602_MainRotor::UH602_MainRotor() :
-    MainRotor()
+    MainRotor2()
 {}
 
 ////////////////////////////////////////////////////////////////////////////////
