@@ -1,3 +1,11 @@
+2019-12-15 Marek M. Cel <marekcel@marekcel.pl>
+
+    * rotors models
+  
+    * blade element theory
+
+
+
 2019-12-14 Marek M. Cel <marekcel@marekcel.pl>
   
     * blade element theory
